gcc/testsuite/rust/rustc/ui/coroutine/issue-45729-unsafe-in-coroutine_dg.rs
#![feature(coroutines, stmt_expr_attributes)]

fn main() {
    let _ = #[coroutine]
    || {
        *(1 as *mut u32) = 42;
// { dg-error ".E0133." "" { target *-*-* } .-1 }
        yield;
    };
}

